data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_259.wast
;; 10. **Test Description**: Utilize a loop where `nop` precedes an increment operation followed by a `br_if` condition that checks the incremented variable to break the loop.     - **Constraint**: Ensures `nop` correctly performs no action, maintaining the expected variable value for the condition.     - **Relation to Infinite Loops**: Prevents the loop from running infinitely due to incorrect increment handling influenced by `nop`.

(assert_invalid 
  (module 
    (func $test 
      (local i32) 
      (loop 
        (nop) 
        (local.set 0 (i32.add (local.get 0) (i32.const 1))) 
        (br_if 0 (i32.eq (local.get 0) (i32.const 10)))
      )
    )
  )
  "type mismatch"
)